--- a/libs/jade/dev/campaigns/campaigns.jade
+++ b/libs/jade/dev/campaigns/campaigns.jade
@@ -303,65 +303,61 @@ block content
             img(src="#{dir}images/campaigns/campaigns-header-elec-goods.png")
     .fullwidth
         .fullwidth-content
-            .campaign-content
-                .flex-row
-                    .col-md-6
-                        .data-display
-                            h2 Take a stand to get results
-                            p We found nearly half of you (47%) don’t complain when something goes wrong with an electrical item.
-                            p Consumers don’t complain because they:
-                                li think the process will be too hard
-                                li think it will take too long
-                                li are convinced they won’t get anywhere
-                                li Have had a bad experience in the past
-                                li don’t expect products to be built to last anyway
-                    .col-md-6
-                        div#overview-chart
+            .flex-row
+                .col-md-6
+                    .data-display
+                        h2 Take a stand to get results
+                        p We found nearly half of you (47%) don’t complain when something goes wrong with an electrical item.
+                        p Consumers don’t complain because they:
+                            li think the process will be too hard
+                            li think it will take too long
+                            li are convinced they won’t get anywhere
+                            li Have had a bad experience in the past
+                            li don’t expect products to be built to last anyway
+                .col-md-6
+                    div#overview-chart
 
     .fullwidth-blue
         .fullwidth-content
-            .campaign-content
-                .flex-row
-                   .col-md-6
-                        .sil-image
-                            img(src="#{dir}images/campaigns/laptop-800.png" align="center")
-                   .col-md-6
-                        .callout
-                            p Your consumer rights apply to whoever sold you the goods, not whoever made them. Your rights are different depending where you bought the item.
-                            p In a shop you don’t have a legal right to return or cancel, but if the store has a returns policy you can use it to get.
-                            p Online, on the phone or by post you get 14 days to return or cancel when you buy something - unless it’s bespoke or made to measure.
-                        p Different people or companies might be responsible for selling, delivering and installing your electrical item. You need to know which to contact if there’s a problem. The good news is they might have damage insurance.
+            .flex-row
+               .col-md-6
+                    .sil-image
+                        img(src="#{dir}images/campaigns/laptop-800.png" align="center")
+               .col-md-6
+                    .callout
+                        p Your consumer rights apply to whoever sold you the goods, not whoever made them. Your rights are different depending where you bought the item.
+                        p In a shop you don’t have a legal right to return or cancel, but if the store has a returns policy you can use it to get.
+                        p Online, on the phone or by post you get 14 days to return or cancel when you buy something - unless it’s bespoke or made to measure.
+                    p Different people or companies might be responsible for selling, delivering and installing your electrical item. You need to know which to contact if there’s a problem. The good news is they might have damage insurance.
     .fullwidth
         .fullwidth-content
-            .campaign-content
-                .flex-row
-                    .col-md-6
-                        h2 Get help
-                        p Whether you think your electrical item can be repaired or replaced, or you want a refund, you will need to return it. If your item is faulty and you're not sure what to do you can:
-                            li check your consumer rights with our #[a(href="https://www.citizensadvice.org.uk/consumer/somethings-gone-wrong-with-a-purchase/return-faulty-goods/") faulty goods tool]
-                            li get advice from #[a(href="#") your nearest Citizens Advice]
-                            li call the Citizens Advice #[a(href="#") consumer helpline]
-                    .col-md-6
-                        .sil-image
-                            img(src="#{dir}images/campaigns/box-800.png" align="center")
+            .flex-row
+                .col-md-6
+                    h2 Get help
+                    p Whether you think your electrical item can be repaired or replaced, or you want a refund, you will need to return it. If your item is faulty and you're not sure what to do you can:
+                        li check your consumer rights with our #[a(href="https://www.citizensadvice.org.uk/consumer/somethings-gone-wrong-with-a-purchase/return-faulty-goods/") faulty goods tool]
+                        li get advice from #[a(href="#") your nearest Citizens Advice]
+                        li call the Citizens Advice #[a(href="#") consumer helpline]
+                .col-md-6
+                    .sil-image
+                        img(src="#{dir}images/campaigns/box-800.png" align="center")
 
     .fullwidth-gray
         .fullwidth-content
-            .campaign-content
+            .col-md-8
                 h2 Learn the facts before you buy again
                 p Many electrical goods are expensive, complicated, large and heavy. Do as much research as you can before buying - it might be inconvenient to return something like a washing machine after it’s arrived at your house.
                 p #[a(href="#") Take a look at our 2015 Know your new rights campaign] for more information about how the Consumer Rights Act affects you.
 
     .fullwidth
         .fullwidth-content
-            .campaign-content
-                .flex-row
-                    .col-md-6
-                        h3 Check for complaints
-                        p Search online for the make and model of anything you’re thinking of buying to see if anyone is complaining about it. Do this even if you’re planning to buy the item on the high street. Ask friends and family too.
-                    .col-md-6
-                        h3 Look out for fakes
-                        p Counterfeit electrical goods might not be made to the required standards, and they might be unsafe. Some commonly counterfeited electrical items are hair straighteners, mobile phone chargers, games consoles and e-cigarettes (sometimes called vapers).
+            .flex-row
+                .col-md-6
+                    h3 Check for complaints
+                    p Search online for the make and model of anything you’re thinking of buying to see if anyone is complaining about it. Do this even if you’re planning to buy the item on the high street. Ask friends and family too.
+                .col-md-6
+                    h3 Look out for fakes
+                    p Counterfeit electrical goods might not be made to the required standards, and they might be unsafe. Some commonly counterfeited electrical items are hair straighteners, mobile phone chargers, games consoles and e-cigarettes (sometimes called vapers).
 
     //.fullwidth-gray
         .fullwidth-content
@@ -400,14 +396,13 @@ block content
 
     .fullwidth
         .fullwidth-content
-            .campaign-content
-                .flex-row
-                    .col-md-6
-                        h3 Watch local Citizens Advice in action
-                        p If you’d like an idea of how we work, watch this short film, made by our Consumer Empowerment Partnership of 5 local Citizens Advice, showing how they help clients with electrical goods problems.
-                    .col-md-6
-                        p(style="position: relative;padding-bottom: 52.1%; padding-top: 25px;height: 0;")
-                            iframe(src="//www.youtube.com/embed/kJOVSfLnqwA?list=PLA56D3E70BE34B6BF", frameborder="0", allowfullscreen, style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;")
+            .flex-row
+                .col-md-6
+                    h3 Watch local Citizens Advice in action
+                    p If you’d like an idea of how we work, watch this short film, made by our Consumer Empowerment Partnership of 5 local Citizens Advice, showing how they help clients with electrical goods problems.
+                .col-md-6
+                    p(style="position: relative;padding-bottom: 52.1%; padding-top: 25px;height: 0;")
+                        iframe(src="//www.youtube.com/embed/kJOVSfLnqwA?list=PLA56D3E70BE34B6BF", frameborder="0", allowfullscreen, style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;")
 
     //.fullwidth-gray
         .fullwidth-content
@@ -428,24 +423,39 @@ block content
                 .col-md-2
                     button.btn-secondary.copy-button-icon copy link
 
+    .fullwidth-gray
+        .fullwidth-content
+            .campaign-content
+                .flex-row
+                    .col-md-5
+                        .stats(style="margin: 2rem 0;")
+                            .i-brand &#xe96d;
+                            h3  30 days
+                            p If your goods are faulty, you can get an immediate refund
+                    .col-md-2
+                    .col-md-5
+                        .stats(style="margin: 2rem 0;")
+                            .i-brand &#xe993;
+                            h3 6 months
+                            p If it can't be repaired or replaced, then you're entitled to a full refund in most cases
+
     .twitter
         .fullwidth-content
             .campaign-content
                 .hashtag
-                    h3 Join us on Twitter with #consumerweek
+                    h3 Join us on Twitter with #[a #consumerweek]
                 .flex-row
                     .col-md-6
                         .tweet
-                            img(src="#{dir}images/campaigns/medium-avatar-square.png")
+                            img(src="#{dir}images/campaigns/twitter-1.png")
                             p
                                 | Bakers to cut bread prices for Consumer Week #[a(href="http://buff.ly/1QzIbF6") buff.ly/1QzIbF6] #[a #bread] #[a #prices] #[a #cut] #[a #ConsumerWeek]
                             p.username #[a @TheCeylon16]
                     .col-md-6
                         .tweet
-                            img(src="#{dir}images/campaigns/medium-avatar-square.png")
-                            p
-                                | Bakers to cut bread prices for Consumer Week #[a(href="http://buff.ly/1QzIbF6") buff.ly/1QzIbF6] #[a #bread] #[a #prices] #[a #cut] #[a #ConsumerWeek]
-                            p.username #[a @TheCeylon16]
+                            img(src="#{dir}images/campaigns/twitter-2.png")
+                            p Check it, don’t regret it…CAB advice if your new car turns out to be stolen #[a #consumerweek] #[a #2ndhandcars] #[a adviceguide.org.uk/england/consum...]
+                            p.username #[a @kingstoncab]
 
     .sharing
         .fullwidth-content
