Dev: Copied dev search page and started new design

--- a/libs/dev/campaigns.less
+++ b/libs/dev/campaigns.less
@@ -202,3 +202,14 @@
 		}
 	}
 }
+
+.footer-campaigns {
+	width: 100%;
+	background-color: @blue;
+	padding: 2rem;
+	color: #fff;
+	text-align: center;
+		a {
+		color: #fff;
+	}
+}
