--- a/libs/jade/dev/campaigns/campaigns.jade
+++ b/libs/jade/dev/campaigns/campaigns.jade
@@ -427,3 +427,7 @@ block content
             a.btn-white.sharing-button-icon_whatsapp Whatsapp
             a.btn-white.sharing-button-icon_email Email
             a.btn-white.sharing-button-icon_copy Copy
+
+    .footer-campaigns
+       .campaign-content
+            p This is a campaign by Citizens Advice; we use our clients' experience and stories to campaign for positive change. #[a(href="https://www.citizensadvice.org.uk/about-us/campaigns/") Find out more about our campaigns]. 
