--- a/libs/guide.less
+++ b/libs/guide.less
@@ -556,3 +556,4 @@ div.tooltip:before {
 @import "dev/template-letter";
 @import "dev/feedback";
 @import "dev/campaigns";
+@import "dev/blocklink";
