--- a/libs/modules/search-results.less
+++ b/libs/modules/search-results.less
@@ -1,4 +1,4 @@
-﻿/**
+/**
  * SEARCH RESULTS
  *
  * Styling for the results in the Search results page.
@@ -11,7 +11,7 @@
     > li {
         list-style: none;
         margin: 0;
-        padding: 1rem 0;
+        padding: 0.7rem 0;
         border-top: @gray-7 1px solid;
         .heading {
             font-size: @font-size-medium;
@@ -66,6 +66,11 @@
             border-radius: 2px;
         }
     }
+}
+
+.search-date {
+    margin-top: -0.4rem;
+    color: @gray-3;
 }
 
 // the old stuff
