dev:change: Update chat content to look more realistic

--- a/libs/jade/dev/webchat/webchat.jade
+++ b/libs/jade/dev/webchat/webchat.jade
@@ -143,27 +143,30 @@ block content
 		#live-chat_body
 			#live-chat_chat
 				.chat-message.advise
+					//.timestamp Adviser at 12:15pm
+					p Hello, thanks for using Citizens Advise chat. By using our service you agree to the #[a terms of service].
+				.chat-message.advise
 					.timestamp Adviser at 12:15pm
-					p Message
+					p Hi Joe, how can I help you today?
 				.chat-message.client
 					.timestamp You at 12:16pm #[span.seen-status Seen]
-					p Message
-				.chat-message.advise
+					p Hi. I'm having trouble filling in my PIP form. I'm not sure how to get proof of my condition.
+				//.chat-message.advise
 					.timestamp Adviser at 12:17pm
 					p Message
-				.chat-message.client
+				//.chat-message.client
 					.timestamp You at 12:18pm #[span.seen-status Seen]
 					p Message
-				.chat-message.advise
+				//.chat-message.advise
 					.timestamp Adviser at 12:19pm
 					p Message
-				.chat-message.client
+				//.chat-message.client
 					.timestamp You at 12:20pm #[span.seen-status Seen]
 					p This is a slightly longer message I posted
-				.chat-message.advise
+				//.chat-message.advise
 					.timestamp Adviser at 12:21pm
 					p Message
-				.chat-message.advise
+				//.chat-message.advise
 					.timestamp Adviser at 12:21pm
 					p Message
 			#live-chat_form
