--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -22,7 +22,7 @@
     position: -webkit-sticky;
     position: sticky;
     z-index: 1;
-    .badge {
+    .section-notice__content .badge {
         background-color: @inventive-teal;
         color: @white;
     }
