fix: Added back blocklink example

--- a/libs/jade/navigation/blocklinks.jade
+++ b/libs/jade/navigation/blocklinks.jade
@@ -25,9 +25,10 @@ block content
 				a(href="#").blocklink Block link
 				a(href="#").blocklink.i-doc-image Image block link
 				a(href="#").blocklink.i-search Search block link
-				a(href="#").blocklink.blocklinks--back Search block link
+				a(href="#").blocklink.blocklinks--back Back block link
 			pre
 				code.language-html
 					| &lt;a href="#" class="blocklink"&gt;Block link&lt;/a&gt;
 					| &lt;a href="#" class="blocklink i-doc-image"&gt;Image block link&lt;/a&gt;
 					| &lt;a href="#" class="blocklink i-search"&gt;Search block link&lt;/a&gt;
+					| &lt;a href="#" class="blocklink blocklinks--back"&gt;Back block link&lt;/a&gt;
