fix: Adviser revealables without JS now show the badge at the top instead of the bottom

--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -65,7 +65,7 @@
 
 .no-js .revealable--adviser {
     background-color: lighten(@inventive-teal-lightest, 9%);
-    &:after {
+    &:before {
         .adviser-badge;
     }
 }
