fix: Removed background colour from adviser revealable close button

--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -59,7 +59,7 @@
         }
     }
     .revealable-toggle-close, .revealable__close {
-        background-color: lighten(@inventive-teal-lightest, 10%)
+        background: none;
     }
 }
 
