--- a/libs/dev/blocklink.less
+++ b/libs/dev/blocklink.less
@@ -12,7 +12,7 @@
     font-size: @font-size-base;
     font-weight: @font-weight-bolder;
     display: block;
-    .btn-icon(@i-right);
+    .btn-icon(@i-right,@color:@link-color);
     border-radius: 2px;
     text-decoration: underline;
 
@@ -26,16 +26,16 @@
 
     // Changing the blocklink icon
     &.i-doc-image {
-        .btn-icon(@i-doc-image);
+        .btn-icon(@i-doc-image,@color:@link-color);
     }
 
     &.i-search {
-        .btn-icon(@i-search);
+        .btn-icon(@i-search,@color:@link-color);
     }
 
     // Changing the blocklink icon
     &.blocklinks--back {
-        .btn-icon(@i-left);
+        .btn-icon(@i-left,@color:@link-color);
         text-align: left;
         padding-left: 2.5em;
         &:after {
@@ -46,6 +46,7 @@
 
     &:visited {
         border: 1px solid lighten(@link-color, 70%);
+        color: @link-visited-color;
         &:after {
             color: @link-visited-color;
         }
@@ -57,10 +58,6 @@
         background-color: lighten(@link-color, 70%);
         border: 1px solid lighten(@link-color, 70%);
         text-decoration: underline;
-    }
-
-    &:after {
-        color: @link-color;
     }
 
 }
