search page with subcategories and replaced large heading on other search pages with suggestion and search results count.

--- a/libs/jade/dev/site/search-2-categories.jade
+++ b/libs/jade/dev/site/search-2-categories.jade
@@ -15,12 +15,11 @@ block script
 block content
 	.flex-row
 		.col-md-8.col-sm-12
-			h1(style="margin-top:-10px;") 'Benafits'
+			.term-suggestion
+				h4 Did you mean #[a Benefits]?
+			.result-count 89 results found:
 			ul.search-results
 				li
-					p(style="margin-bottom:2px;") Did you mean #[a 'Benefits']?
-				li
-					p 89 results:
 					.heading
 						a Benefits
 					.description These pages give you information on benefits and tax credits if you are working or unemployed, sick or disabled, a parent, a young person, an older person or a veteran.
