--- a/libs/jade/dev/site/search-2-page-2.jade
+++ b/libs/jade/dev/site/search-2-page-2.jade
@@ -15,22 +15,19 @@ block script
 block content
 	.flex-row
 		.col-md-8.col-sm-12
-			h1(style="margin-top:-10px;") All results for 'Benafits'
+			.term-suggestion
+				h4 Did you mean #[a Benefits]?
+			.result-count 89 results found:
 			ul.search-results
 				li
-					p(style="margin-bottom:2px;") Did you mean #[a 'Benefits']?
-				li
-					p 89 results found:
 					.heading
 						a Benefits
 					.description These pages give you information on benefits and tax credits if you are working or unemployed, sick or disabled, a parent, a young person, an older person or a veteran.
-					.search-date 25 Oct 2016
 
 				li
 					.heading
 						a Sick or disabled people and carers
 					.description If you're sick or disabled, you may be able to claim benefits and tax credits.
-					.search-date 14 Jun 2015
 					ul.section
 						li #[a Benefits]
 
@@ -38,7 +35,46 @@ block content
 					.heading
 						a Employment and Support Allowance (ESA)
 					.description Information on how to claim Employment and Support Allowance including eligibility, filling in the ESA1 and ESA50 forms and challenging an ESA decision.
-					.search-date 01 Jan 2014
+					ul.section
+						li #[a Benefits]
+						li #[a Sick or disabled people and carers]
+
+				li
+					.callout--adviser
+						.heading
+							a Contractual sick pay
+						.description If an employer has their own sick pay scheme it should be included in your client’s employment contract.
+						ul.section
+							li #[a Workplace rights]
+							li #[a Sick pay]
+
+				li
+					.heading
+						a Benefits for families and children
+					.description Benefits for pregnant women and parents, including maternity allowance, maternity grants, child benefit and child trust fund.
+					ul.section
+						li #[a Benefits]
+						li #[a Children and young people]
+
+				li
+					.heading
+						a Young people and benefits
+					.description Information on benefits for young people between the ages of 14 and 18.
+					ul.section
+						li #[a Benefits]
+						li #[a Children and young people]
+
+				li
+					.heading
+						a Sick or disabled people and carers
+					.description If you're sick or disabled, you may be able to claim benefits and tax credits.
+					ul.section
+						li #[a Benefits]
+
+				li
+					.heading
+						a Employment and Support Allowance (ESA)
+					.description Information on how to claim Employment and Support Allowance including eligibility, filling in the ESA1 and ESA50 forms and challenging an ESA decision.
 					ul.section
 						li #[a Benefits]
 						li #[a Sick or disabled people and carers]
@@ -47,7 +83,6 @@ block content
 					.heading
 						a Benefits for families and children
 					.description Benefits for pregnant women and parents, including maternity allowance, maternity grants, child benefit and child trust fund.
-					.search-date 12 May 2014
 					ul.section
 						li #[a Benefits]
 						li #[a Children and young people]
@@ -56,33 +91,6 @@ block content
 					.heading
 						a Young people and benefits
 					.description Information on benefits for young people between the ages of 14 and 18.
-					.search-date 13 May 2014
-					ul.section
-						li #[a Benefits]
-						li #[a Children and young people]
-
-				li
-					.heading
-						a Sick or disabled people and carers
-					.description If you're sick or disabled, you may be able to claim benefits and tax credits.
-					.search-date 14 Jun 2015
-					ul.section
-						li #[a Benefits]
-
-				li
-					.heading
-						a Employment and Support Allowance (ESA)
-					.description Information on how to claim Employment and Support Allowance including eligibility, filling in the ESA1 and ESA50 forms and challenging an ESA decision.
-					.search-date 01 Jan 2014
-					ul.section
-						li #[a Benefits]
-						li #[a Sick or disabled people and carers]
-
-				li
-					.heading
-						a Benefits for families and children
-					.description Benefits for pregnant women and parents, including maternity allowance, maternity grants, child benefit and child trust fund.
-					.search-date 12 May 2014
 					ul.section
 						li #[a Benefits]
 						li #[a Children and young people]
@@ -91,34 +99,25 @@ block content
 					.heading
 						a Young people and benefits
 					.description Information on benefits for young people between the ages of 14 and 18.
-					.search-date 13 May 2014
 					ul.section
 						li #[a Benefits]
 						li #[a Children and young people]
 
 				li
-					.heading
-						a Young people and benefits
-					.description Information on benefits for young people between the ages of 14 and 18.
-					.search-date 13 May 2014
-					ul.section
-						li #[a Benefits]
-						li #[a Children and young people]
-
-			.pagination
-				ul
-					li.active #[span 1]
-					li #[a 2]
-					li #[a 3]
-					li.pagination--dot ...
-					li #[a 9]
-					li #[a Next]
-				ul
-
-					li
-						h3 Related searches
+					h3 Related searches
 					p #[a Universal Credit],&nbsp;&nbsp;#[a Housing Benefit],&nbsp;&nbsp;#[a What we are saying about benefits]
+
+				li
 		
+					.pagination
+						ul
+							li #[a 1]
+							li.active #[span 2]
+							li #[a 3]
+							li.pagination--dot ...
+							li #[a 9]
+							li #[a Next]
+
 					fieldset
 						.field-group.field-group--buttons
 							input#field(type="search" placeholder="Search again")
