--- a/libs/jade/dev/site/search-2.jade
+++ b/libs/jade/dev/site/search-2.jade
@@ -15,22 +15,20 @@ block script
 block content
 	.flex-row
 		.col-md-8.col-sm-12
-			h1(style="margin-top:-10px;") 'Benafits'
+			.term-suggestion
+				h4 Did you mean #[a Benefits]?
+			.result-count 89 results found:
 			ul.search-results
+				
 				li
-					p(style="margin-bottom:2px;") Did you mean #[a 'Benefits']?
-				li
-					p Search results:
 					.heading
 						a Benefits
 					.description These pages give you information on benefits and tax credits if you are working or unemployed, sick or disabled, a parent, a young person, an older person or a veteran.
-					.search-date 25 Oct 2016
 
 				li
 					.heading
 						a Sick or disabled people and carers
 					.description If you're sick or disabled, you may be able to claim benefits and tax credits.
-					.search-date 14 Jun 2015
 					ul.section
 						li #[a Benefits]
 
@@ -38,16 +36,23 @@ block content
 					.heading
 						a Employment and Support Allowance (ESA)
 					.description Information on how to claim Employment and Support Allowance including eligibility, filling in the ESA1 and ESA50 forms and challenging an ESA decision.
-					.search-date 01 Jan 2014
 					ul.section
 						li #[a Benefits]
 						li #[a Sick or disabled people and carers]
 
 				li
+					.callout--adviser
+						.heading
+							a Contractual sick pay
+						.description If an employer has their own sick pay scheme it should be included in your client’s employment contract.
+						ul.section
+							li #[a Workplace rights]
+							li #[a Sick pay]
+
+				li
 					.heading
 						a Benefits for families and children
 					.description Benefits for pregnant women and parents, including maternity allowance, maternity grants, child benefit and child trust fund.
-					.search-date 12 May 2014
 					ul.section
 						li #[a Benefits]
 						li #[a Children and young people]
@@ -56,17 +61,16 @@ block content
 					.heading
 						a Young people and benefits
 					.description Information on benefits for young people between the ages of 14 and 18.
-					.search-date 13 May 2014
 					ul.section
 						li #[a Benefits]
 						li #[a Children and young people]
 
 				li
 					h3 Related searches
-				p #[a Universal Credit],&nbsp;&nbsp;#[a Housing Benefit],&nbsp;&nbsp;#[a What were saying about benefits]
+					p #[a Universal Credit],&nbsp;&nbsp;#[a Housing Benefit],&nbsp;&nbsp;#[a What were saying about benefits]
 
 				li
-					h3 #[a.blocklink(href="/dev/site/search-2-page-2.html") 89 total results for 'Benefits' - view a list of all results]
+					#[a.blocklink(href="/dev/site/search-2-page-2.html") 84 more results for 'Benefits']
 
 				fieldset
 					.field-group.field-group--buttons
