--- a/libs/jade/dev/site/search-no-results.jade
+++ b/libs/jade/dev/site/search-no-results.jade
@@ -15,14 +15,14 @@ block script
 block content
 	.flex-row
 		.col-md-8.col-sm-12
-			h1(style="margin-top:-10px;") No results
+			.result-count 
+				h4 No results for 'Bnefits'. 
+				p Please carefully check your spelling, or try searching with a different term.
 			ul.search-results
 				li
-					p(style="margin-bottom:2px;") Unfortunately, no pages match your search. Please carefully check your spelling, or try searching with a different term.
-
 				fieldset
 					.field-group.field-group--buttons
-						input#field(type="search" placeholder="Search again")
+						input#field(type="search" placeholder="bnefits")
 						button.btn Search&nbsp;&nbsp;
 
 				li
