--- a/libs/modules/search-results.less
+++ b/libs/modules/search-results.less
@@ -68,10 +68,15 @@
     }
 }
 
-.search-date {
-    margin-top: -0.4rem;
-    color: @gray-3;
-    font-size: 0.875rem;
+.term-suggestion {
+    margin-top: -1.2rem;
+    margin-bottom: 1.6rem;
+}
+
+.result-count {
+    color: @gray-1;
+    font-size: 1rem;
+    margin-bottom: 1.4rem;
 }
 
 // the old stuff
