dev:change: Tweaking search results mockup

--- a/libs/jade/dev/site/search-2-page-2.jade
+++ b/libs/jade/dev/site/search-2-page-2.jade
@@ -1,5 +1,5 @@
 block settings
-	- var title = ""
+	- var title = "benafits"
 	- var dir = "../../"
 	//- var sidebar = true
 
@@ -15,9 +15,7 @@ block script
 block content
 	.flex-row
 		.col-md-8.col-sm-12
-			.term-suggestion
-				h4 Did you mean #[a Benefits]?
-			.result-count 89 results found:
+			.term-suggestion 89 results found
 			ul.search-results
 				li
 					.heading
@@ -39,14 +37,13 @@ block content
 						li #[a Benefits]
 						li #[a Sick or disabled people and carers]
 
-				li
-					.callout--adviser
-						.heading
-							a Contractual sick pay
-						.description If an employer has their own sick pay scheme it should be included in your client’s employment contract.
-						ul.section
-							li #[a Workplace rights]
-							li #[a Sick pay]
+				li.adviser-result
+					.heading
+						a Contractual sick pay
+					.description If an employer has their own sick pay scheme it should be included in your client’s employment contract.
+					ul.section
+						li #[a Workplace rights]
+						li #[a Sick pay]
 
 				li
 					.heading
@@ -95,80 +92,21 @@ block content
 						li #[a Benefits]
 						li #[a Children and young people]
 
-				li
-					.heading
-						a Young people and benefits
-					.description Information on benefits for young people between the ages of 14 and 18.
-					ul.section
-						li #[a Benefits]
-						li #[a Children and young people]
+				li.pagination
+					ul
+						li #[a(href="search-2.html") 1]
+						li.active #[span 2]
+						li #[a 3]
+						li.pagination--dot ...
+						li #[a 9]
+						li #[a Next]
+
+				li.related-results
+					strong Related searches
+					p #[a Universal Credit],&nbsp;&nbsp;#[a Housing Benefit],&nbsp;&nbsp;#[a What were saying about benefits]
 
 				li
-					h3 Related searches
-					p #[a Universal Credit],&nbsp;&nbsp;#[a Housing Benefit],&nbsp;&nbsp;#[a What we are saying about benefits]
-
-				li
-		
-					.pagination
-						ul
-							li #[a 1]
-							li.active #[span 2]
-							li #[a 3]
-							li.pagination--dot ...
-							li #[a 9]
-							li #[a Next]
-
-					fieldset
+					.fieldset
 						.field-group.field-group--buttons
-							input#field(type="search" placeholder="Search again")
-							button.btn Search&nbsp;&nbsp;
-
-
-		.col-md-4.col-sm-12
-			//.well
-				fieldset
-					label(for="exampleSelect1") Find a specific benefit
-					.dropdown
-						select(id="exampleSelect1")
-							option Please select…
-							option Asbestos-related illness benefit
-							option Attendance allowance
-							option Benefits cap
-							option Bereavement benefits
-							option Budgeting loans
-							option Carer's allowance
-							option Child benefit
-							option Child tax credit
-							option Cold weather payments
-							option Community care grants
-							option Constant attendance allowance
-							option Crisis loans
-							option Disability living allowance
-							option Disablement benefit
-							option Education maintenance allowance
-							option Employment and support allowance
-							option Exceptionally severe disablement allowance
-							option Funeral payments
-							option Guardians allowance
-							option Housing benefit
-							option Incapacity benefit
-							option Income support
-							option Industrial injuries disablement benefit
-							option Jobseeker's allowance
-							option Maternity allowance
-							option Maternity grants
-							option Pension credit
-							option Personal Independence Payment
-							option Reduced earnings allowance
-							option Retirement allowance
-							option Severe disablement allowance
-							option Social fund
-							option State retirement pension
-							option Statutory sick pay
-							option Universal Credit
-							option War pension
-							option War widow's/widower's pension
-							option Widowed Parent’s Allowance
-							option Widows' benefits
-							option Winter fuel payment
-							option Working tax credit
+							input#field(type="search", placeholder="Search again", value="#{title}")
+							button.btn Search
