--- a/libs/jade/dev/site/search-no-results.jade
+++ b/libs/jade/dev/site/search-no-results.jade
@@ -1,5 +1,5 @@
 block settings
-	- var title = ""
+	- var title = "No results for 'Bnefits'"
 	- var dir = "../../"
 	//- var sidebar = true
 
@@ -15,68 +15,11 @@ block script
 block content
 	.flex-row
 		.col-md-8.col-sm-12
-			.result-count 
-				h4 No results for 'Bnefits'. 
-				p Please carefully check your spelling, or try searching with a different term.
-			ul.search-results
-				li
-				fieldset
-					.field-group.field-group--buttons
-						input#field(type="search" placeholder="bnefits")
-						button.btn Search&nbsp;&nbsp;
+			p Please carefully check your spelling, or try searching with a different term.
 
-				li
-					h3 Popular searches
-				p #[a Universal Credit],&nbsp;&nbsp;#[a Housing Benefit],&nbsp;&nbsp;#[a What were saying about benefits]
+			fieldset
+				.field-group.field-group--buttons
+					input#field(type="search")
+					button.btn Search
 
-				li
-					h3 #[a.blocklink Leave feedback on your search experience]
-
-		.col-md-4.col-sm-12
-			//.well
-				fieldset
-					label(for="exampleSelect1") Find a specific benefit
-					.dropdown
-						select(id="exampleSelect1")
-							option Please select…
-							option Asbestos-related illness benefit
-							option Attendance allowance
-							option Benefits cap
-							option Bereavement benefits
-							option Budgeting loans
-							option Carer's allowance
-							option Child benefit
-							option Child tax credit
-							option Cold weather payments
-							option Community care grants
-							option Constant attendance allowance
-							option Crisis loans
-							option Disability living allowance
-							option Disablement benefit
-							option Education maintenance allowance
-							option Employment and support allowance
-							option Exceptionally severe disablement allowance
-							option Funeral payments
-							option Guardians allowance
-							option Housing benefit
-							option Incapacity benefit
-							option Income support
-							option Industrial injuries disablement benefit
-							option Jobseeker's allowance
-							option Maternity allowance
-							option Maternity grants
-							option Pension credit
-							option Personal Independence Payment
-							option Reduced earnings allowance
-							option Retirement allowance
-							option Severe disablement allowance
-							option Social fund
-							option State retirement pension
-							option Statutory sick pay
-							option Universal Credit
-							option War pension
-							option War widow's/widower's pension
-							option Widowed Parent’s Allowance
-							option Widows' benefits
-							option Winter fuel payment
-							option Working tax credit
+			#[a.blocklink Leave feedback on your search experience]
