--- a/libs/modules/search-results.less
+++ b/libs/modules/search-results.less
@@ -11,7 +11,7 @@
     > li {
         list-style: none;
         margin: 0;
-        padding: 0.7rem 0;
+        padding: @box-spacing-vertical 0;
         border-top: @gray-7 1px solid;
         .heading {
             font-size: @font-size-medium;
@@ -51,19 +51,39 @@
                 }
             }
         }
+        fieldset {
+            margin-bottom: 0;
+        }
     }
     .adviser-result {
-        .heading a:before {
-            content: "A";
-            float: left;
-            display: inline-block;
-            background-color: @inventive-teal;
-            color: @white;
-            width: 1.7em;
-            text-align: center;
-            margin-right: .25em;
-            font-weight: @font-weight-base;
-            border-radius: 2px;
+        background-color: lighten(@inventive-teal-lightest, 9%);
+        //border: none;
+        padding: @box-spacing-vertical @box-spacing-horizontal;
+        &:before {
+            .adviser-badge;
+        }
+    }
+    .adviser-categories {
+        background-color: @gray-8;
+        //margin-bottom: -.75rem;
+        margin-left: 1rem;
+        margin-right: 1rem;
+        padding: @box-spacing-vertical @box-spacing-horizontal;
+    }
+    .related-results {
+        background-color: @gray-8;
+        padding: @box-spacing-vertical @box-spacing-horizontal;
+        h3, p {
+            margin: 0;
+        }
+    }
+    .pagination {
+        padding: @box-spacing-vertical*2 0;
+        ul, .blocklink {
+            margin: 0;
+        }
+        a, span {
+            margin-bottom: 0;
         }
     }
 }
